<resources>
    <string name="app_name">Happy Shipper</string>
    <string name="title_activity_login">Happy Shipper</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign In</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="link_sign_up">No account yet ? Create one</string>
    <string name="logo">Logo</string>
    <string name="title_activity_home">Happy Shipper</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="delivering">Delivering</string>
    <string name="delivered">Delivered</string>
    <string name="home">Home</string>
    <string name="contact">Contact</string>
    <string name="logout">Logout</string>
    <string name="default_address">National Road6, Phum Kaksekam, Sangkat Sra Ngae, Tuek Vil, Puok, Siem Reap</string>
    <string name="default_to_address">888 National Road 6, Tuek Vil, Puok, Siem Reap</string>
    <string name="goods">Pich Sophea</string>
    <string name="__50">KHR 50</string>
    <string name="received_first">Fee</string>
    <string name="_3km">3 km</string>
    <string name="receiving_first">Total:</string>
    <string name="note">Note</string>
    <string name="name_of_user">Pich Sophea</string>
    <string name="phone_number">Phone:</string>
    <string name="_84_9635_781_283">(+855) 17 521 904</string>
    <string name="hc_00_1">CODE : HC_00_1</string>
    <string name="shipping">Shipping</string>
    <string name="_54_ngu_hanh_son_da_nang">National Road6, Phum Kaksekam, Sangkat Sra Ngae, Tuek Vil, Puok, Siem Reap</string>
    <string name="__10">KHR 10</string>
    <string name="note_for_shipper">Make a phone call before you come</string>
    <string name="nothing_completed">Nothing completed</string>
    <string name="title_activity_detail">Line item</string>
    <string name="email_address">User name</string>
    <string name="admin">admin</string>
</resources>
