<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@drawable/background_login"
    tools:context="com.happycity.project.happy_shipper.ui.activity.LoginActivity">

    <!-- Login progress -->
    <ProgressBar
        android:id="@+id/login_progress"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:visibility="gone" />

    <ScrollView
        android:id="@+id/login_form"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/email_login_form"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_gravity="center">

            <ImageView
                android:src="@drawable/logo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="24dp"
                android:contentDescription="@string/logo" />

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <AutoCompleteTextView
                    android:id="@+id/emailLogin"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@android:color/white"
                    android:drawableLeft="@drawable/mail"
                    android:inputType="textEmailAddress"
                    android:maxLines="1"
                    android:hint="@string/email_address"
                    android:padding="15dp"
                    android:alpha="0.6"
                    android:drawablePadding="10dp"
                    android:textColorHint="@android:color/white"
                    android:background="@drawable/layout_edit_input_login"
                    android:singleLine="true"
                    android:drawableStart="@drawable/mail" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:imeActionId="6"
                    android:alpha="0.6"
                    android:textColor="@android:color/white"
                    android:drawablePadding="10dp"
                    android:imeActionLabel="@string/action_sign_in_short"
                    android:drawableLeft="@drawable/key"
                    android:imeOptions="actionUnspecified"
                    android:inputType="textPassword"
                    android:maxLines="1"
                    android:singleLine="true"
                    android:padding="15dp"
                    android:textColorHint="@android:color/white"
                    android:background="@drawable/layout_edit_input_login"
                    android:drawableStart="@drawable/key" />

            </android.support.design.widget.TextInputLayout>

            <Button
                android:id="@+id/email_sign_in_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/action_sign_in"
                android:textColor="@android:color/white"
                android:padding="12dp"
                android:textStyle="bold"
                android:background="@drawable/button_login"/>
            <TextView
                android:id="@+id/link_sign_up"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/link_sign_up"
                android:textColor="@android:color/white"
                android:gravity="center"/>
        </LinearLayout>
    </ScrollView>
</LinearLayout>
