<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto">

        <LinearLayout
            android:id="@+id/content_goods"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:orientation="horizontal"
            android:layout_marginLeft="@dimen/fab_margin"
            android:layout_marginRight="@dimen/fab_margin"
            android:layout_marginTop="@dimen/fab_margin"
            android:weightSum="9">
            <ImageView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:src="@drawable/pin"
                android:layout_weight="1"/>
            <LinearLayout
                android:orientation="vertical"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="8">
                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:weightSum="5">
                    <TextView
                        android:id="@+id/txtUser"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:text="@string/goods"
                        android:gravity="center"
                        android:textStyle="bold"
                        android:textSize="18sp"
                        android:layout_gravity="center"
                        android:layout_weight="4"/>
                    <ImageView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:src="@drawable/layers"
                        android:layout_marginTop="@dimen/card_item_margin"
                        android:layout_gravity="right"
                        android:layout_weight="1"
                        tools:ignore="RtlHardcoded" />
                </LinearLayout>
                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:weightSum="5">
                    <ImageView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:src="@drawable/location"
                        android:layout_gravity="center"
                        android:layout_weight="1"/>
                    <TextView
                        android:id="@+id/from_address"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:gravity="center_vertical"
                        android:textSize="12sp"
                        android:text="@string/default_address"
                        android:layout_weight="4"/>

                </LinearLayout>
                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:weightSum="5">
                    <ImageView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:src="@drawable/location"
                        android:layout_gravity="center"
                        android:layout_weight="1"/>
                    <TextView
                        android:id="@+id/to_address"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:gravity="center_vertical"
                        android:textSize="12sp"
                        android:text="@string/default_to_address"
                        android:layout_weight="4"/>

                </LinearLayout>
                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:padding="@dimen/fab_margin">
                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="left|center_vertical"
                        android:src="@drawable/placeholder"
                        tools:ignore="RtlHardcoded" />
                    <TextView
                        android:id="@+id/txtDistance"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/_3km"
                        />
                    <TextView
                        android:paddingLeft="@dimen/card_item_margin"
                        android:text="@string/receiving_first"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingStart="@dimen/card_item_margin"
                        tools:ignore="RtlSymmetry" />
                    <TextView
                        android:id="@+id/txtBill"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/__50"
                        android:paddingLeft="@dimen/card_item_margin"
                        android:textColor="@android:color/holo_red_dark"
                        android:paddingStart="@dimen/card_item_margin"
                        tools:ignore="RtlSymmetry" />
                    <TextView
                        android:paddingLeft="@dimen/card_item_margin"
                        android:text="@string/received_first"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingStart="@dimen/card_item_margin"
                        tools:ignore="RtlSymmetry" />
                    <TextView
                        android:id="@+id/txtFee"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/__50"
                        android:paddingLeft="@dimen/card_item_margin"
                        android:textColor="@android:color/holo_red_dark"
                        android:paddingStart="@dimen/card_item_margin"
                        tools:ignore="RtlSymmetry" />
                </LinearLayout>


            </LinearLayout>
        </LinearLayout>
        <LinearLayout
            android:layout_below="@+id/content_goods"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_margin="@dimen/fab_margin"
            android:background="@color/colorCommon"/>
</RelativeLayout>