<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.happycity.project.happy_shipper.ui.activity.GoodsDetailActivity">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:weightSum="11">
        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            tools:ignore="UselessParent"
            android:background="@android:color/darker_gray">
            <TextView
                android:id="@+id/detail_code"
                android:text="@string/hc_00_1"
                android:textColor="@android:color/black"
                android:textStyle="bold"
                android:gravity="center"
                android:textSize="20sp"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="2"
            android:orientation="horizontal"
            android:weightSum="4">
            <ImageView
                android:layout_gravity="center_vertical"
                android:src="@drawable/user"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                tools:ignore="NestedWeights" />
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:gravity="center_vertical"
                android:layout_weight="2">

                <TextView
                    android:textStyle="bold"
                    android:textColor="@android:color/black"
                    android:id="@+id/user_name_detail"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/name_of_user"
                    android:textSize="20sp"/>
                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" >
                    <TextView
                        android:text="@string/_84_9635_781_283"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="20sp"/>
                </LinearLayout>

            </LinearLayout>
            <ImageButton
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:src="@drawable/telephone"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:background="@null"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:orientation="vertical"
            android:layout_weight="7"
            android:layout_marginTop="@dimen/detail_margin_top"
            android:padding="@dimen/fab_margin"
            tools:ignore="NestedWeights">
            <TextView
                android:text="@string/shipping"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="24sp"
                android:textStyle="bold"
                android:textColor="@color/colorCommon"
                />
            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/detail_margin_top">
                <ImageView
                    android:src="@drawable/location"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
                <TextView
                    android:id="@+id/detail_to_address"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginLeft="@dimen/fab_margin"
                    android:textSize="18sp"
                    android:text="@string/_54_ngu_hanh_son_da_nang"
                    android:layout_marginStart="@dimen/fab_margin" />
            </LinearLayout>
            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/fab_margin">
                <ImageView
                    android:src="@drawable/distance"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
                <TextView
                    android:id="@+id/detail_distance"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/detail_margin_top"
                    android:text="20km"
                    android:textSize="18sp"
                    android:layout_gravity="center_vertical"
                    android:layout_marginStart="@dimen/fab_margin" />
            </LinearLayout>
            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/fab_margin">
                <ImageView
                    android:src="@drawable/total_bill"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
                <TextView
                    android:id="@+id/total_bill_of_goods"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/detail_margin_top"
                    android:text="@string/__50"
                    android:textSize="18sp"
                    android:layout_gravity="center_vertical"
                    android:layout_marginStart="@dimen/fab_margin" />
            </LinearLayout>
            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/fab_margin">
                <ImageView
                    android:src="@drawable/fees"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
                <TextView
                    android:id="@+id/detail_fees_received"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/detail_margin_top"
                    android:text="@string/__10"
                    android:textSize="18sp"
                    android:layout_gravity="center_vertical"
                    android:layout_marginStart="@dimen/fab_margin" />
            </LinearLayout>
            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/fab_margin">
                <ImageView
                    android:src="@drawable/note"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
                <TextView
                    android:id="@+id/note_for_shipper"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/detail_margin_top"
                    android:text="@string/note_for_shipper"
                    android:textSize="18sp"
                    android:layout_gravity="center_vertical"
                    android:layout_marginStart="@dimen/fab_margin" />
            </LinearLayout>
            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/fab_margin">
                <ImageView
                    android:src="@drawable/battery"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
                <TextView
                    android:id="@+id/status_of_goods"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/detail_margin_top"
                    android:text="@string/delivering"
                    android:textSize="18sp"
                    android:layout_gravity="center_vertical"
                    android:layout_marginStart="@dimen/fab_margin" />
            </LinearLayout>

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:orientation="horizontal"
            android:layout_weight="1"
            android:weightSum="10">
            <Button
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:background="@color/colorCommon"
                android:textColor="@android:color/white"
                android:text="Done"
                android:layout_weight="3"/>
            <Button
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:background="@android:color/holo_green_light"
                android:textColor="@android:color/white"
                android:text="No contact"
                android:layout_weight="3"/>
            <Button
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:background="@android:color/holo_orange_light"
                android:textColor="@android:color/white"
                android:text="Tomorrow"
                android:layout_weight="3"/>
            <ImageButton
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:src="@drawable/cancel"
                android:background="@null"/>
        </LinearLayout>
    </LinearLayout>



</LinearLayout>
